# calendar-alarms

./: .env.example  .gitignore  README.md  TODO.md  bethtest.py  check_for_alarms.py  crontab.txt  env.py.example  epcal.service  index.py  morning_announcements.py  pyproject.toml
ansible/: ansible.cfg  audio_clients.yml  audio_host.yml  bluetooth_button_listeners.yml  bluetooth_listeners.yml  debug_audio_clients.yml  site.yml
ansible/inventory/: hosts.ini  hosts.yml
ansible/inventory/group_vars/: all.yml
ansible/roles/audio_client/defaults/: main.yml
ansible/roles/audio_client/handlers/: main.yml
ansible/roles/audio_client/tasks/: codebase.yml  http.yml  main.yml  snapclient_identify.yml  snapclient_install.yml  snapclient_service.yml  sound.yml
ansible/roles/audio_client/templates/: asound.conf.j2  calendar-alarms-client-utils.sh.j2  calendar-alarms-http.service.j2  calendar-alarms-snapclient-identify.sh.j2  calendar-alarms-snapclient.service.j2  calendar-alarms-utils.sh.j2  index.py.j2  snapclient.conf.j2
ansible/roles/audio_pipeline/defaults/: main.yml
ansible/roles/audio_pipeline/tasks/: codebase.yml  main.yml  mpd_configure.yml  snapserver_install.yml  snapserver_service.yml
ansible/roles/audio_pipeline/templates/: calendar-alarms-utils.sh.j2  snapserver.conf.j2
ansible/roles/bluetooth_button_listener/defaults/: main.yml
ansible/roles/bluetooth_button_listener/tasks/: codebase.yml  main.yml  service.yml
ansible/roles/bluetooth_button_listener/templates/: .env.j2  bluetooth-button-listener.service.j2
ansible/roles/bluetooth_listener/defaults/: main.yml
ansible/roles/bluetooth_listener/tasks/: codebase.yml  main.yml
ansible/roles/calendar_alarms_client/defaults/: main.yml
ansible/roles/calendar_alarms_client/tasks/: bash_functions.yml  codebase.yml  http.yml  main.yml  reboot.yml  snapclient_identify.yml  snapclient_install.yml  sound.yml  (+3 more)
audio/alarms/: README.md
bluetooth-button-listener/: README.md  pyproject.toml
bluetooth-button-listener/btb/: listen.py
bluetooth-button-listener/script/: listen.sh
bluetooth-button-listener/script/deploy/: copy_to_pi.sh
bluetooth-button-listener/tests/: test_listen.py
bluetooth-listener/: README.md
bluetooth-listener/script/deploy/: copy_to_pi.sh
client/: amixer_control.py  index.py  music_assistant.py  pyproject.toml  snapserver.py
client/script/: start.sh
ecal/: cli.py  google_calendar.py  log_config.py  music_assistant.py  scene.py  select_item.py
ecal/alarms/: __init__.py  alarm.py  bluetooth_connect.py  cli.py  log_config.py  mpd.py  mpv.py  sound.py  text_to_voice.py
ecal/announcements/: announce.py
ecal/calendar/: google_calendar.py
example_resources/: morning_announcements_prelude_choices.txt
script/: check_for_alarms.sh  check_for_alarms_nas.sh  morning_announcements.sh  morning_announcements_nas.sh  mpv_test.sh  refresh_calendar_data.sh
script/deploy/: audio_clients.sh  audio_host.sh  audio_host_codebase.sh  bluetooth_button_listener.sh  bluetooth_listener.sh
script/dev/: run_command_on_clients.sh
script/prod/: debug.sh  install.sh
server/: README.md  bethtest.py  calendar-alarms-http.service  check_for_alarms.py  crontab.txt  env.py.example  index.py  index_2.py  morning_announcements.py  play_announcement.py  pyproject.toml  server.conf
server/audio/background_music/: README.md
server/example_resources/: accent_tld_choices.txt
server/script/: connect_bluetooth_speaker.sh  refresh_calendar_data.sh  truncate_logs.sh
server/script/dev/: install.sh
server/script/prod/: install.sh
server/static/: styles.css
server/tests/manual/: calendar.json  calendar_short.json  check_for_alarms_test.sh  check_for_announcements_test.sh  cron_bluetooth_connection_test.sh  local_audio_announcement_test.sh  local_one_off_announcement_test.sh  local_text_announcement_test.sh  local_tts_announcement_test.sh  morning_announcements_cached_test.sh  morning_announcements_test.sh  one_off_announcement_test.sh  prod_audio_announcement_test.sh  prod_one_off_announcement_test.sh  prod_tts_announcement_test.sh  recording_1783930884421.m4a  scene_test.py
server/tests/vcal/: test_random_text.py  test_select_item.py
server/tests/vcal/announcements/: test_announce.py  test_morning_announcements.py
server/tests/vcal/calendar/: test_google_calendar.py
server/vcal/: admin_ui.py  cli.py  log_config.py  logs_ui.py  music_assistant.py  music_assistant_utils.py  music_assistant_ws.py  random_text.py  scene.py  select_item.py  settings.py  snapserver.py  string_utils.py
server/vcal/alarms/: __init__.py  alarm.py  cli.py  mpd.py  sound.py  text_to_voice.py  ui.py
server/vcal/announcements/: announce.py  api.py  cli.py  housie_talkie.py  index.py  morning_announcements.py  snapcast.py
server/vcal/cal/: google_calendar.py  ui.py
server/vcal/housie_talkie/: api.py  audio.py
snapweb/: index.html  manifest.webmanifest  sw.js
snapweb/assets/: index-DeDkoCTL.js
tests/ecal/: test_random_text.py  test_select_item.py
tests/ecal/alarms/: test_mpd.py
tests/ecal/calendar/: test_google_calendar.py
tests/manual/: calendar.json  check_for_alarms_test.sh  morning_announcements_test.sh
tests/vcal/: test_select_item.py
tests/vcal/alarms/: test_mpd.py
tests/vcal/calendar/: test_google_calendar.py
vcal/: cli.py  music_assistant.py  random_text.py  scene.py
vcal/alarms/: alarm.py  cli.py  mpd.py  text_to_voice.py
vcal/announcements/: announce.py  cli.py
vcal/calendar/: google_calendar.py
(+41 files in other folders)
