[build-system]
requires = [
  "setuptools>=77",
  "wheel",
  "packaging>=24.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "calender-alarms"
version = "1.0.0"
description = "House wide alarms for Google calendar events"
readme = "README.md"
requires-python = ">=3.9.2"
license = "MIT"
authors = [
  {name = "Beth Skurrie", email = "beth@bethesque.com"},
]
keywords = []

# Main project dependencies (replaces requirements.txt)
dependencies = [
    "google-api-python-client==2.99.0",
    "google-auth-httplib2==0.1.1",
    "google-auth-oauthlib==1.1.0",
    "requests==2.31.0",
    "tzdata",
    "gtts==2.5.4",
    "python-musicpd==0.9.2",
    "music-assistant-client==1.3.5",
    "websockets==16.0",
    "pydantic-settings==2.14.2",
    "pydantic-settings[yaml]",
    "pydantic-ui==0.5.4",
    "python-multipart==0.0.32"
]

[project.optional-dependencies]
# Extra dependencies installed via `pip install ".[dev]"`
dev = [
    "black",
    "pytest==9.0.3"
]

[project.urls]
# Links displayed on PyPI
Homepage = "https://github.com/bethesque/calendar-alarms"

[project.scripts]

cal-alarm-stop = "vcal.alarms.cli:stop_alarm"
cal-alarm-test = "vcal.alarms.cli:test_alarm"
cal-alarm-check = "vcal.alarms.cli:check_alarms"
play-test-file = "vcal.alarms.cli:play_test_file"

cal-announce = "vcal.announcements.cli:play_morning_announcements" # Morning summary announcement
cal-announce-cached = "vcal.announcements.cli:play_morning_announcements_cached" # Play the cached voice file

cal-data-refresh = "vcal.cli:refresh_calendar_data"

[tool.setuptools]
# Tells setuptools where to find your source code
packages = ["vcal"]

[tool.pytest.ini_options]
# Configuration for other tools (like pytest) can also live here
testpaths = ["tests"]
